<resources>
    <string name="app_name">Behance</string>
    <string name="text_nearby">Nearby</string>
    <string name="text_discover">Discover</string>
    <string name="text_buckets">Buckets</string>
    <string name="discover_field">Discover fields page</string>
    <string name="discover_follower">Discover followers</string>
    <string name="view_pager_follower">POPULAR</string>
    <string name="view_pager_fields">FIELDS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collection_activity_label">Collections</string>
    <string name="buckets_activity_label">Buckets</string>
    <string name="shot_image">Shot image</string>
    <string name="project_name">Project name</string>
    <string name="project_field">Project field</string>
    <string name="share">Share</string>
    <string name="comment_activity_title">Comments</string>
    <string name="inbox">Inbox</string>
    <string name="share_project">Share project</string>
    <string name="bucket_name">Bucket name</string>
    <string name="bucket_description">Bucket description</string>
    <string name="new_bucket_title">New bucket</string>
    <string name="new_bucket_create">Create</string>
    <string name="new_bucket_cancel">Cancel</string>
    <string name="home_title">Home</string>
    <string name="nearby_title">NearBy</string>
    <string name="bucket_title">Bucket</string>
    <string name="text_home">Home</string>
    <string name="discover_title">Discover</string>
    <string name="projects">Projects</string>
    <string name="collections">Collections</string>
    <string name="users">Artists</string>
    <string name="show_more_collections">See all collections</string>
    <string name="show_more_users">See all artists</string>
    <string name="action_delete">DELETE</string>
    <string name="bucket_activity_title">Choose buckets</string>
    <string name="save">SAVE</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Valid Password</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_message_name">Enter Valid Name</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Exists</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
