<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.example.yuhaolu.behancedisplay.toolbar.Searchbar
            android:id="@+id/search_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:gravity="top" />

        <TextView
            android:id="@+id/discover_project_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_xsmall"
            android:text="@string/projects"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_discover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/discover_collection_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_xsmall"
            android:text="@string/collections"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/discover_collection_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/show_more_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:text="@string/show_more_collections"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/discover_user_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_xsmall"
            android:text="@string/users"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/discover_user_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/show_more_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/show_more_users"
            android:textStyle="bold"
            android:visibility="invisible" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>